--- a/Presentacion.ipynb
+++ b/Presentacion.ipynb
@@ -84,7 +84,7 @@
     "└── feedback/\n",
     "```\n",
     "\n",
-    "Vamos a borrar la carpeta `ps1` incluida por defecto en `source` y modificamos el archivo `header.py` para reflejar mejor nuestro curso."
+    "Vamos a borrar la carpeta `ps1` incluida por defecto en `source` y modificamos el archivo `header.py` para reflejar mejor nuestro curso. Un ejemplo de `header.py` se incluye en la carpeta `plantillas`."
    ]
   },
   {
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Existen diversas estrategias o patrones para estructurar un ejercicio de programación, a continuación mostramos algunos ejemplos de las que más útiles nos han parecido en nuestra práctica."
+    "Existen diversas estrategias o patrones para estructurar un ejercicio de programación, en la carpeta ejemplos incluimos algunas las que más útiles nos han parecido en nuestra práctica."
    ]
   },
   {
@@ -114,7 +114,11 @@
    "source": [
     "**Paso 3: Genrar la versión de los estudiantes**\n",
     "\n",
-    "Nbgrader tome nuestro assignment y lo procesa para generar la versión de los estudiantes. Esta versión se encuentra en la carpeta `release`. Tenemos que crear un repositorio en GitHub y subir el contenido."
+    "Una vez este lista la tarea en la carpeta `source`, Nbgrader la procesa para generar la versión de los estudiantes. Esta versión se encuentra en la carpeta `release`. Podemos generar la versión de los estudiantes desde la interfaz gráfica de Jupyter Notebook, en la ventana ...\n",
+    "\n",
+    "Ahora toca subir la tarea a un repositorio de GitHub. Es importante subir la versión para estudiantes, en la carpeta `release`, ya que la versión en la carpeta `source` contienen las soluciones. Para iniciar el repositorio local, ejecutamos el script `git-init` en la carpeta de la tarea. Este script inicializa el repositorio bajo `git` y agrega los archivos `gitignore` y `Readme.md` de la carpeta `plantillas`. \n",
+    "\n",
+    "En GitHub, creamos un repositorio, con el mismo nombre que la carpeta en el esquema de nbgrader. Al momento es necesario subir los archivos a GitHub manualmente, para ello podemos usar las instrucciones que aparecen en la página del repositorio vacío."
    ]
   },
   {
@@ -132,7 +136,7 @@
    "source": [
     "**Paso 5: Recuperar las tareas.**\n",
     "\n",
-    "Cuando el estudiante termina la tarea o se cumple la fecha límite es hora de recopilar todo su trabajo para calificar. Para este fin hemos adaptado un script `ss` que automaticamente clona todos los repositorios y copia el trabajo a la carpeta `submitted`, donde nbgrader espera encontrar el trabajo que necesita calificar."
+    "Cuando el estudiante termina la tarea o se cumple la fecha límite es hora de recopilar todo su trabajo para calificar. Para este fin hemos adaptado un script, `clone-all.py`, que automaticamente clona todos los repositorios y copia el trabajo a la carpeta `submitted`, donde nbgrader espera encontrar el trabajo que necesita calificar."
    ]
   },
   {
@@ -146,7 +150,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Paso 7: Generar y mandar la retroalimentación.**"
+    "**Paso 7: Generar y mandar la retroalimentación.**\n",
+    "\n",
+    "`nbgrader feedback <tarea>` +  script `git-feedback.py <tarea>`."
    ]
   }
  ],
