Done outlining steps

--- a/Presentacion.ipynb
+++ b/Presentacion.ipynb
@@ -105,7 +105,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Existen diversas estrategias o patrones para estructurar un ejercicio de programación, en la carpeta ejemplos incluimos algunas las que más útiles nos han parecido en nuestra práctica."
+    "Existen diversas estrategias o patrones para estructurar un ejercicio de programación, en la carpeta ejemplos incluimos algunas las que más útiles nos han parecido en nuestra práctica.\n",
+    "\n",
+    "TODO: Lista de patrones con link a la carpeta de ejemplos."
    ]
   },
   {
@@ -114,7 +116,7 @@
    "source": [
     "**Paso 3: Genrar la versión de los estudiantes**\n",
     "\n",
-    "Una vez este lista la tarea en la carpeta `source`, Nbgrader la procesa para generar la versión de los estudiantes. Esta versión se encuentra en la carpeta `release`. Podemos generar la versión de los estudiantes desde la interfaz gráfica de Jupyter Notebook, en la ventana ...\n",
+    "Una vez este lista la tarea en la carpeta `source`, Nbgrader la procesa para generar la versión de los estudiantes. Esta versión se encuentra en la carpeta `release`. Podemos generar la versión de los estudiantes desde la interfaz gráfica de Jupyter Notebook, en la pestaña de `Formgrader`.\n",
     "\n",
     "Ahora toca subir la tarea a un repositorio de GitHub. Es importante subir la versión para estudiantes, en la carpeta `release`, ya que la versión en la carpeta `source` contienen las soluciones. Para iniciar el repositorio local, ejecutamos el script `git-init` en la carpeta de la tarea. Este script inicializa el repositorio bajo `git` y agrega los archivos `gitignore` y `Readme.md` de la carpeta `plantillas`. \n",
     "\n",
@@ -136,14 +138,22 @@
    "source": [
     "**Paso 5: Recuperar las tareas.**\n",
     "\n",
-    "Cuando el estudiante termina la tarea o se cumple la fecha límite es hora de recopilar todo su trabajo para calificar. Para este fin hemos adaptado un script, `clone-all.py`, que automaticamente clona todos los repositorios y copia el trabajo a la carpeta `submitted`, donde nbgrader espera encontrar el trabajo que necesita calificar."
+    "Cuando el estudiante termina la tarea o se cumple la fecha límite es hora de recopilar todo su trabajo para calificar. Para este fin hemos adaptado un script, `clone-all.py`, que automaticamente clona todos los repositorios y copia el trabajo a la carpeta `submitted`, donde nbgrader espera encontrar el trabajo que necesita calificar.\n",
+    "\n",
+    "Recomendamos calificar dentro de una instancia de Docker, en caso de que algún alumno se quiera pasar de listo e incluya algún comando peligroso en su tarea. Las instrucciones para montar y utilizar la instancia de Docker se pueden encontrar en la carpeta `docker`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Paso 6: Calificar.**"
+    "**Paso 6: Calificar.**\n",
+    "\n",
+    "Existen dos maneras de ejecutar el proceso de auto-calificación. La primera es desde la pestaña de `Formgrader` en Jupyter, donde se pueden calificar alumnos específicos de uno a uno. Más útil, es el comando\n",
+    "\n",
+    "```nbgrader autograde <tarea> ```\n",
+    "\n",
+    "El comando ejecuto el proceso en todas las tareas correspondientes en la carpeta `submitted`."
    ]
   },
   {
@@ -152,7 +162,26 @@
    "source": [
     "**Paso 7: Generar y mandar la retroalimentación.**\n",
     "\n",
-    "`nbgrader feedback <tarea>` +  script `git-feedback.py <tarea>`."
+    "Una vez se ha calificado, es importante dar retroalimentación a los alumnos. De nuevo, esto se puede hacer uno a uno, desde la pestaña `Formgrader`, o, de manera automatizada, con el comando\n",
+    "\n",
+    "```nbgrader feedback <tarea>```\n",
+    "\n",
+    "Este comando genera una versión html de la tarea con el puntaje obtenido en cada ejercicio y comentarios opcionales. El feedback, como se le llama, se encuentra ahora en la carpeta `feedback`. Para hacer llegar la retroalimentación a los estudiantes, necesitamos subir el archovo html a su repositorio en GitHub. Hemos adaptado otro script para tal efecto. Para ejecutar el script, se usa el comando\n",
+    "\n",
+    "```git-feedback.py <tarea>```\n",
+    "\n",
+    "Este script copia todos los archivos html con la retroalimentación a la carpeta correspondiente dentro de `cloned` y ejecuta un `git push` para subir los cambios al repositorio de cada estudiante en GitHub."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Solo hemos mostrado una manera de utilizar las herramientas en el proceso de enseñanza-aprendizaje. Es posible adaptar estás estrategias o crear nuevas estrategias basadas en las mismas herramientas. Cada herramienta es capaz de muchas más cosas de las que hemos mostrado. Por ejemplo, GitHub Classroom permite definir tests unitarios independientes de Jupyter y nbgrader, que se pueden usar para calificar código fuente en cualquier lenguaje de programación de manera automatizada. Remendamos estudiar la documentación de cada herramienta para explorar las diferenrtes posibilidades.\n",
+    "\n",
+    "Por últmo, si alguno de ustedes adopta alguna herramienta y les gustaría compartir su estrategia, son bienvenidos a realizar una 'pull request' en este repositorio.\n",
+    "\n",
+    "!Gracias!"
    ]
   }
  ],
