Slides, Instructions and Examples added

--- a/Presentacion.ipynb
+++ b/Presentacion.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "##### Gonzalo G. Peraza Mues & Didier Gamboa Ángulo (Enero 2021)"
+    "##### Gonzalo G. Peraza Mues & Didier Gamboa Angulo (Enero 2021)"
    ]
   },
   {
